# eule

./: .gitignore  CLAUDE.md  PRODUCT.md  ROADMAP.md  TECHSTACK.md  TODO.md  eule-spec-prompt.md  pyproject.toml
docs/: drift-monitoring.md  reconciliation-watchdog.md
eule/: aggregator.py  allocation.py  briefing.py  cli.py  config.py  db.py  fx.py  models.py  options.py  output.py  quotes.py  trades.py
eule/accounting/: README.md  __init__.py  allocator.py  balances.py  cash.py  chart.py  cli.py  config.py  export.py  fetch.py  import_flex.py  import_sof.py  journal.py  ledger.py  manual_trades.py  models.py  state.py  tax.py
eule/bestand/: bonds.py  briefing.py  cli.py  thesis.py
eule/betrieb/: cli.py
eule/bewertung/: cli.py  trades.py
eule/brokers/: __init__.py  ibkr.py  ig.py  manual.py  (+1 more)
scripts/: migrate_ep_json_to_db.py
tests/: test_accounting.py  test_accounting_fetch.py  test_accounting_state.py  test_aggregator.py  test_allocation.py  test_bonds.py  test_brokers_ibkr.py  test_brokers_manual.py  test_brokers_tradier.py  test_config.py  test_cron.py  test_db.py  test_fx.py  test_jobs_daily.py  test_models_positions.py  test_options.py  test_precheck_action_times.py  test_precheck_character.py  test_precheck_eod_json.py  test_precheck_fsm.py  test_precheck_fuchs_config.py  test_precheck_host_disk.py  test_precheck_strategy_notes.py  test_precheck_window.py  test_quotes.py  test_render.py  test_schedule_config.py  test_scheduler.py  test_trades.py  test_weekly_collect.py
web/: README.md  app.js  balances.json  index.html  style.css  vercel.json
(+39 files in other folders)
