[project]
name = "eule"
version = "0.1.0"
description = "Trade Journal + Portfolio Monitor CLI"
authors = [
    {name = "blaurock"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer>=0.15.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
eule = "eule.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
